# vds

./: Cargo.toml
src/: http_object.rs  main.rs  resource.rs
src/handler/: compute.rs  identity.rs  mod.rs
src/json_object/: compute.rs  identity.rs  mod.rs
