[package]
name = "vds"
version = "0.1.0"
authors = ["solarsail <newleaf.lu@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
iron-pipeline = { git = "https://github.com/deadalusai/iron-pipeline" }
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"

[dependencies.hyper]
version = "0.9"
default-features = false
